--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,17 @@
   "short_name": "MachoPig",
   "icons": [
     {
-    "src": "/images/machopig-logo.png",
+    "src": "./images/machopig-logo.png",
     "type": "image/png",
     "sizes": "144x144"
     },
     {
-    "src": "/images/machopig-logo192px.png",
+    "src": "./images/machopig-logo192px.png",
     "type": "image/png",
     "sizes": "192x192"
     },
     {
-    "src": "/images/machopig-logo512px.png",
+    "src": "./images/machopig-logo512px.png",
     "type": "image/png",
     "sizes": "512x512"
     }
