--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
     "sizes": "512x512"
     }
   ],
-  "start_url": "/",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#FFC0CB"
 }
