--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
     "sizes": "512x512"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#FFC0CB"
 }
